--- a/package.json
+++ b/package.json
@@ -18,6 +18,15 @@
   },
   "homepage": "https://github.com/Kumilachew-g/Personal-Portfolio#readme",
   "devDependencies": {
-    "hint": "^7.0.1"
+    "hint": "^2.0.0",
+    "postcss-lit": "^0.4.3",
+    "stylelint": "^14.9.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-config-standard-scss": "^4.0.0",
+    "stylelint-csstree-validator": "^2.0.0"
+  },
+  "dependencies": {
+    "stylelint-scss": "^4.2.0"
   }
 }
