--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "personal-portfolio",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
+  "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,12 +18,13 @@
   },
   "homepage": "https://github.com/Kumilachew-g/Personal-Portfolio#readme",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.26.0",
     "hint": "^7.1.0",
-    "postcss-lit": "^0.4.3",
     "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^21.0.0",
-    "stylelint-config-standard-scss": "^4.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0"
   }
